# newton_rootfinder

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  DEV_CMD.md  README.md  SPECIFICATIONS.md  TODO.md  solver_log.txt
.github/workflows/: ci.yml
benches/: RESULTS.md  broyden_case8.rs  minimal_vs_advanced.rs
benches/data/: broyden_case8_BFM_jac.xml  broyden_case8_BROY1.xml  broyden_case8_BROY1_INV.xml  broyden_case8_BROY1_jac.xml  broyden_case8_BROY2.xml  broyden_case8_BROY2_INV.xml  broyden_case8_BROY2_jac.xml  broyden_case8_BSM_jac.xml  broyden_case8_GRST1.xml  broyden_case8_GRST1_INV.xml  broyden_case8_GRST2.xml  broyden_case8_GRST2_INV.xml  broyden_case8_NR.xml  broyden_case8_SN.xml
benches/square2/: dynamic_types.rs  minimal_solver_ref.rs  static_types.rs
scripts/: run_benchmark.sh  run_tests.sh
src/: lib.rs  log.rs  minimal_solver.rs  model.rs  model_with_func.rs  solver.rs  solver_minimal.rs
src/iteratives/: iterative_var.rs  iterative_var_fd.rs  iteratives.rs  mod.rs
src/solver/: log.rs  mod.rs  solver.rs
src/solver_advanced/: mod.rs
src/solver_advanced/iteratives/: iterative_var.rs  iterative_var_fd.rs  iteratives_base.rs  mod.rs
src/solver_advanced/model/: mod.rs  model_definition.rs  model_from_func.rs
src/solver_advanced/residuals/: config.rs  mod.rs  values.rs
src/solver_advanced/solver/: default.rs  jacobian.rs  log.rs  mod.rs  parameters.rs  resolution_method.rs  solver_advanced.rs
src/solver_advanced/test_cases/: broyden1965.rs  polynom.rs  spedicato1996.rs
src/solver_advanced/util/: constructor.rs  jacobian.rs  mod.rs  parser.rs  residuals.rs
src/solver_n_dimensional/: errors.rs  mod.rs  util_nalgebra.rs
src/solver_n_dimensional/iteratives/: default.rs  iterative_var.rs  iterative_var_fd.rs  iteratives_base.rs  mod.rs
src/solver_n_dimensional/model/: error.rs  mod.rs  model_definition.rs  model_from_closure.rs  model_from_func.rs
src/solver_n_dimensional/residuals/: config.rs  mod.rs  values.rs
src/solver_n_dimensional/solver/: default.rs  jacobian.rs  log.rs  mod.rs  parameters.rs  resolution_method.rs  rootfinder.rs
src/solver_n_dimensional/xml_parser/: mod.rs  node_iterative.rs  parser.rs  (+7 more)
src/util/: iteratives.rs  iteratives_fd.rs  jacobian.rs  mod.rs  residuals.rs
tests/: jacobian.rs  lib.rs
tests/advanced_parametrization/: broyden.rs  broyden_case10.xml  log_ref.txt  mod.rs
tests/common/: broyden1965.rs  matrix.rs  mod.rs  run_case.rs  run_case_closure.rs  run_case_function.rs  spedicato1996.rs
tests/errors/: inaccurate_values.rs  mod.rs  non_convergence.rs  non_invertible_jacobian.rs
tests/jacobian/: broyden.rs  mod.rs  non_linear.rs
tests/log/: broyden.rs  broyden_case10.xml  log_ref.txt  log_ref_with_additional_infos.txt  log_ref_without_additional_infos.txt  mod.rs
tests/model/: mod.rs  static_model.rs
tests/parser/: data_fd.xml  data_jac.xml  mod.rs  parser_fd.rs  parser_jac.rs
tests/solver/: broyden.rs  mod.rs  polynom.rs
tests/user_model/: broyden.rs  closure.rs  mod.rs
util/: Cargo.toml
util/src/: lib.rs  solver_one_dimensional.rs
(+31 files in other folders)
