[package]
name = "newton_rootfinder"
version = "0.3.0"
authors = ["nathan.eckert <nathan.eckert@polytechnique.edu>"]
edition = "2018"
description = "Newton based methods for root finding"
repository = "https://github.com/Nateckert/newton_rootfinder"
documentation = "https://docs.rs/newton_rootfinder/"
readme = "README.md"
keywords = ["Newton", "Raphson", "Root", "Rootfinder", "nrf"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
float-cmp = "0.6"
criterion = "0.3.2"

[[bench]]
name = "minimal_vs_advanced"
harness = false

[dependencies]
nalgebra = "0.21.0"
minidom = "0.12.0"
