[package]
name = "newton_rootfinder"
version = "0.6.0"
authors = ["nathan.eckert <nathan.eckert@polytechnique.edu>"]
edition = "2018"
description = "Newton based methods for root finding"
repository = "https://github.com/Nateckert/newton_rootfinder"
documentation = "https://docs.rs/newton_rootfinder/"
readme = "README.md"
keywords = ["Newton", "Raphson", "Root", "Rootfinder", "nrf"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
float-cmp = "0.8.0"
criterion = "0.3.2"
util = { path = "./util" }

[[bench]]
name = "minimal_vs_advanced"
harness = false

[[bench]]
name = "broyden_case8"
harness = false

[dependencies]
nalgebra = "0.26"
minidom = "0.12"
whoami = "1.1"
rustc_version_runtime = "0.2.0"
chrono = "0.4"
