[package]
name = "newton_rootfinder"
rust-version = "1.56"
version = "0.10.0"
authors = ["nathan.eckert <nathan.eckert@polytechnique.edu>"]
edition = "2021"
description = "Newton based methods for root finding"
repository = "https://github.com/Nateckert/newton_rootfinder"
documentation = "https://docs.rs/newton_rootfinder/"
readme = "README.md"
keywords = ["Newton", "Raphson", "Root", "Rootfinder", "nrf"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
float-cmp = "0.9.0"
criterion = "0.3"
util = { path = "./util" }

[[bench]]
path = "benches/square2/minimal_solver_ref.rs"
name = "minimal_solver_ref"
harness = false

[[bench]]
path = "benches/square2/dynamic_types.rs"
name = "dynamic_types"
harness = false

[[bench]]
path = "benches/square2/static_types.rs"
name = "static_types"
harness = false

[[bench]]
name = "broyden_case8"
harness = false


[dependencies]
nalgebra = "0.31"
minidom = { version = "0.12", optional = true }
whoami = { version = "1.2", optional = true }
rustc_version_runtime = { version = "0.2", optional = true }
chrono = { version = "0.4", optional = true }

[features]
additional_log_info = ["chrono", "rustc_version_runtime", "whoami"]
xml_config_file = ["minidom"]

[package.metadata.docs.rs]
# Enable certain features when building docs for docs.rs
features = ["xml_config_file", "additional_log_info"]